service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-tugas-pnt-service
spec:
  selector:
    app: my-tugas-pnt
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
